# Franka

./: README.md  install_nvidia.sh
libfranka/examples/: CMakeLists.txt
src/franka_motion_control/: CMakeLists.txt
src/franka_pick_place/: CMakeLists.txt  package.xml
src/franka_pick_place/include/franka/: examples_common.hpp
src/franka_pick_place/launch/: move_to_start_pose.launch
src/franka_pick_place/src/: franka_pick_place.cpp  move_to_start_pose.cpp
src/franka_ros/franka_control/launch/: franka_control.launch
src/franka_ros/franka_example_controllers/launch/: cartesian_impedance_example_controller.launch  move_to_start.launch
src/moveit_tutorials/doc/perception_pipeline/src/: cylinder_segment.cpp
src/mvp_grasp/: README.md
src/mvp_grasp/dougsm_helpers/src/dougsm_helpers/: tf_helpers.py  tf_helpers_node.py
src/mvp_grasp/franka_control_wrappers/ros_nodes/: set_panda_defaults.py
src/mvp_grasp/franka_control_wrappers/src/franka_control_wrappers/: panda_commander.py
src/mvp_grasp/ggcnn/cfg/: ggcnn_service.yaml  ggcnn_service_test.yaml
src/mvp_grasp/ggcnn/launch/: ggcnn_service.launch  test.launch  yolo_ggcnn_service.launch
src/mvp_grasp/ggcnn/ros_nodes/: ggcnn_draw_rectangle.py  ggcnn_predict_realtime.py  ggcnn_predict_rt.py  ggcnn_service.py  ggcnn_service_node.py  test.py  yolo_ggcnn_service_node.py
src/mvp_grasp/ggcnn/src/ggcnn/: ggcnn_first.py  ggcnn_pre.py  ggcnn_test.py  ggcnn_torch.py  grasp.py
src/mvp_grasp/ggcnn/src/ggcnn/models/: epoch_0282_acc_0.6705.pth  epoch_0356_acc_0.3453.pth  epoch_49_iou_0.80_statedict_new.pt
src/mvp_grasp/linemod/: CMakeLists.txt  package.xml  setup.py
src/mvp_grasp/linemod/launch/: realsense_linemod.launch
src/mvp_grasp/linemod/scripts/: linemod_detection.py  trans.py
src/mvp_grasp/linemod/scripts/ggcnn_output/: 0629_111640_.txt
src/mvp_grasp/mvp_grasping/cfg/: mvp_grasp.yaml  mvp_grasp_test.yaml
src/mvp_grasp/mvp_grasping/launch/: panda_grasp.launch  robot_bringup.launch  wrist_realsense.launch  wrist_realsense_redwall.launch
src/mvp_grasp/mvp_grasping/ros_nodes/: grasp_entropy_node.py  linemod_open_grasp.py  panda_closed_loop_grasp.py  panda_open_loop_grasp.py  panda_open_loop_grasp_rewrite.py  panda_test.py  redwall_open_loop_grasp.py  redwallbot_open_loop_grasp.py  yolo_panda_open_loop_grasp.py
src/mvp_grasp/mvp_grasping/src/mvp_grasping/: panda_base_grasping_controller.py
src/mvp_grasp/object_2d_grasp/: CMakeLists.txt  package.xml  setup.py
src/mvp_grasp/object_2d_grasp/scripts/: object_2d_dection.py  object_2d_grasp.py  panda_grasp.py
src/panda_moveit_config/config/: panda_arm.srdf.xacro  panda_arm.xacro  panda_arm_hand.srdf.xacro  sensors_kinect_pointcloud.yaml
src/panda_moveit_config/launch/: demo_real.launch  moveit.rviz  panda_control_moveit_rviz.launch  panda_handeye.launch  panda_moveit_with_obstacle_avoidance.launch  sensor_manager.launch.xml
src/vgn/src/vgn/: perception.py
